--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -252,28 +252,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-08-12 08:21:48,767: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-08-12 08:21:48,770: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-08-12 08:21:48,771: INFO: common: created directory at: artifacts]\n",
+      "[2024-08-12 10:19:51,156: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-08-12 10:19:51,156: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-08-12 10:19:51,156: INFO: common: created directory at: artifacts]\n",
       "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 10s 1s/step - loss: 0.0097 - accuracy: 1.0000\n",
-      "[2024-08-12 08:21:59,501: INFO: common: json file saved at: scores.json]\n"
+      "9/9 [==============================] - 11s 1s/step - loss: 0.5624 - accuracy: 0.6043\n",
+      "[2024-08-12 10:20:03,048: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/08/12 08:22:01 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2024/08/12 10:20:04 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-08-12 08:22:02,167: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\sunit\\AppData\\Local\\Temp\\tmp1y5mchjw\\model\\data\\model\\assets\n",
-      "[2024-08-12 08:22:02,619: INFO: builder_impl: Assets written to: C:\\Users\\sunit\\AppData\\Local\\Temp\\tmp1y5mchjw\\model\\data\\model\\assets]\n"
+      "[2024-08-12 10:20:05,514: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\sunit\\AppData\\Local\\Temp\\tmpwj81ho2n\\model\\data\\model\\assets\n",
+      "[2024-08-12 10:20:05,933: INFO: builder_impl: Assets written to: C:\\Users\\sunit\\AppData\\Local\\Temp\\tmpwj81ho2n\\model\\data\\model\\assets]\n"
      ]
     },
     {
@@ -282,9 +282,9 @@
      "text": [
       "c:\\Users\\sunit\\anaconda3\\envs\\kidney\\lib\\site-packages\\_distutils_hack\\__init__.py:26: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2024/08/12 08:22:39 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 4\n",
-      "Created version '4' of model 'VGG16Model'.\n"
+      "Successfully registered model 'VGG16Model'.\n",
+      "2024/08/12 10:20:42 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 1\n",
+      "Created version '1' of model 'VGG16Model'.\n"
      ]
     }
    ],
